kotlin-ide/idea/testData/multiplatform/duplicateActualsExplicit/top/top.kt
package foo

expect class <!AMBIGUOUS_ACTUALS("Class 'A'", "bottom, middle")!>A<!>